# mork-root-task

./: CMakeLists.txt  Cargo.toml  README.md  build.rs  linker-qemu-user.ld
src/: heap.rs  ipc_buffer.rs  lang_item.rs  main.rs  test_cases.rs
src/hal/riscv/: mod.rs
