[package]
name = "mork-root-task"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mork-common = { path = "../mork-common" }
mork-user-lib = { path = "../mork-user-lib" }
log = "0.4"
buddy_system_allocator = "0.11"
spin = "0.9.8"
elf = { version = "0.7.4", default-features = false }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }

[profile.release]
lto = true